<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="at.buchberger.keyexchangeapp.MainActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tf_willkommen"
            android:id="@+id/willkommen"
            android:layout_gravity="center" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_main_ownprivkeys"
            android:id="@+id/ownkeys"
            android:layout_gravity="center_horizontal"
            android:onClick="ownPrivKeys" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_main_ownpubkeys"
            android:layout_gravity="center_horizontal"
            android:onClick="ownPubKeys"
            android:id="@+id/ownpubkeys" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonPublicKeys"
            android:id="@+id/publickeys"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:onClick="publicKeys" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAddPubKey"
            android:id="@+id/addpubkey"
            android:layout_gravity="center_horizontal"
            android:onClick="addPubKey" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_response"
            android:layout_marginTop="10sp"
            android:textColor="#51a54c"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_response"
            android:id="@+id/btn_response" />


    </LinearLayout>

</RelativeLayout>
